--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#071F12</color>
+    <color name="colorPrimaryDark">#020A09</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="corTexto">#4CAF50</color>
+    <color name="corFundo">#222121</color>
+
 </resources>
