--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#071F12</color>
     <color name="colorPrimaryDark">#020A09</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="corTexto">#4CAF50</color>
-    <color name="corFundo">#222121</color>
+    <color name="corTexto">#232423</color>
+    <color name="corFundo">#D6CDCD</color>
 
 </resources>
