--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:fillViewport="true">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -47,6 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="16dp"
         android:text="anterior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="250dp"
         android:layout_marginLeft="250dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="próximo"
@@ -77,9 +86,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginBottom="8dp"
         android:text="Danilo Oliveira"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btAnt"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -91,9 +99,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius ante id massa tincidunt, ut lobortis massa sagittis. Vivamus facilisis lorem augue, a pulvinar quam dapibus sed. Vivamus sed elit vel ligula ultricies cursus in cursus tortor. Mauris a sodales nibh, nec facilisis mauris. Nam massa dolor, condimentum eget ultricies ut, euismod sit amet risus. Cras pretium, dolor a tempor varius, nibh sapien laoreet tellus, quis pellentesque velit ante non nisl. Nunc at vehicula elit. Phasellus dictum nibh elit, scelerisque efficitur lorem euismod id. Sed volutpat dolor dapibus metus interdum, vitae bibendum lorem venenatis. Mauris euismod laoreet nisl."
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius ante id massa tincidunt, ut lobortis massa sagittis. Vivamus facilisis lorem augue, a pulvinar quam dapibus sed. Vivamus sed elit vel ligula ultricies cursus in cursus tortor. Mauris a sodales nibh, nec facilisis mauris. Nam massa dolor, condimentum eget ultricies ut, euismod sit amet risus. Cras pretium, dolor a tempor varius, nibh sapien laoreet tellus, quis pellentesque velit ante non nisl. Nunc at vehicula elit. Phasellus dictum nibh elit, scelerisque efficitur lorem euismod id. Sed volutpat dolor dapibus metus interdum, vitae bibendum lorem venenatis. Mauris euismod laoreet nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius ante id massa tincidunt, ut lobortis massa sagittis. Vivamus facilisis lorem augue, a pulvinar quam dapibus sed. Vivamus sed elit vel ligula ultricies cursus in cursus tortor. Mauris a sodales nibh, nec facilisis mauris. Nam massa dolor, condimentum eget ultricies ut, euismod sit amet risus. Cras pretium, dolor a tempor varius, nibh sapien laoreet tellus, quis pellentesque velit ante non nisl. Nunc at vehicula elit. Phasellus dictum nibh elit, scelerisque efficitur lorem euismod id. Sed volutpat dolor dapibus metus interdum, vitae bibendum lorem venenatis. Mauris euismod laoreet nisl. Lorem ipsum dolor sit amet"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textTitulo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
